# framework-core

./: .gitignore  README.md  UBUNTU.md  Updates.txt  build_src.sh
src/: COPYRIGHT  Makefile.am  build.sh  configure.ac  ossie.pc.in
src/acinclude/: ACX_PTHREAD.m4  AC_CHECK_PYMODULE.m4  AC_CXX_BOOL.m4  AC_CXX_HAVE_STL.m4  AC_CXX_NAMESPACES.m4  AC_HAVE_XERCES_C.m4  AC_M_FUNCTION_INTEGRATION.m4  ETR_SOCKET_NSL.m4  Makefile.am  ax_boost_base.m4  ax_boost_thread.m4  boost.m4  expat.m4  grlab.m4  java.m4  ossie.m4  redhawk.m4
src/aminclude/: idlj.am  jarfile.am
src/base/framework/: AggregateDevice_impl.cpp  AnyUtils.cpp  ApplicationFactory_impl.cpp  Application_impl.cpp  Component.cpp  CorbaUtils.cpp  Device_impl.cpp  DomainManager_impl.cpp  EventChannelSupport.cpp  Events.cpp  ExecutableDevice_impl.cpp  FileSystem_impl.cpp  LoadableDevice_impl.cpp  Logging_impl.cpp  Makefile.am  MessageInterface.cpp  PortSet_impl.cpp  PortSupplier_impl.cpp  PropertyInterface.cpp  PropertyMap.cpp  PropertySet_impl.cpp  Resource_impl.cpp  Service_impl.cpp  ThreadedComponent.cpp  Value.cpp  affinity.cpp  helperFunctions.cpp  prop_helpers.cpp
src/base/framework/java/: Makefile.am
src/base/framework/java/jni/: Makefile.am
src/base/framework/java/jni/COS/: Makefile.am
src/base/framework/java/ossie/: Makefile.am
src/base/framework/java/ossie/src/org/ossie/component/: Component.java  Device.java  Logging.java  PropertyChangeRec.java  QueryableUsesPort.java  Resource.java  Service.java
src/base/framework/java/ossie/src/org/ossie/corba/: utils.java
src/base/framework/java/ossie/src/org/ossie/events/: MessageConsumerPort.java  MessageSupplierPort.java  Publisher.java  Subscriber.java
src/base/framework/java/ossie/src/org/ossie/logging/: RH_LogEventAppender.java  logging.java
src/base/framework/java/ossie/src/org/ossie/properties/: AbstractSequenceProperty.java  AbstractSimpleProperty.java  Action.java  Allocator.java  AnyUtils.java  BooleanProperty.java  CharProperty.java  ComplexProperty.template  ComplexSequenceProperty.template  ComplexUtils.java  IProperty.java  Kind.java  Mode.java  NumericProperty.java  NumericProperty.template  NumericSequenceProperty.java  NumericSequenceProperty.template  Property.java  SimpleProperty.java  StringProperty.java  StructDef.java  generate-props.py
src/base/framework/java/ossie/src/org/ossie/redhawk/: ApplicationContainer.java  DeviceManagerContainer.java  DomainManagerContainer.java
src/contrib/: genIPK.sh.template  redhawk.spec  redhawkUnits.txt
src/control/framework/: FileManager_impl.cpp  FileSystem_impl.cpp  File_impl.cpp  Makefile.am  helperFunctions.cpp  nodebooter.cpp  prop_helpers.cpp  prop_utils.cpp
src/control/parser/: Makefile.am  Properties.cpp  componentProfile.cpp
src/etc/: Makefile.am
src/etc/bash_completion.d/: nodeBooter
src/etc/profile.d/: redhawk.csh.in  redhawk.sh.in
src/idl/: Makefile.am
src/omnijni/: Makefile.am
src/omnijni/src/cpp/: Makefile.am  any.cpp  exception.cpp  object.cpp  omnijni.cpp  orb.cpp  sequence.cpp  utilities.cpp
src/omnijni/src/cpp/CORBA/: Makefile.am  corba.idl  generate-holders.py
src/releng/: redhawk.spec
src/testing/: .gitignore  Makefile.am  runtests.py  setup.py
src/testing/_unitTestHelpers/: allocMgrHelpers.py  runtestHelpers.py  scatest.py
src/testing/helpers/: scatest.py
src/testing/jackhammer/: app-create.py
src/testing/sdr/dev/devices/JavaTestDevice/java/: Makefile.am  startJava.sh
src/testing/sdr/dev/devices/JavaTestDevice/java/src/JavaTestDevice/java/: JavaTestDevice.java  JavaTestDevice_base.java
src/testing/sdr/dev/devices/ProgrammableDevice/cpp/: Makefile.am  ProgrammableDevice.cpp  ProgrammableDevice.h  ProgrammableDevice_base.cpp  ProgrammableDevice_base.h  ProgrammableDevice_prog_base.h  configure.ac  entry_point.h  main.cpp  struct_props.h
src/testing/sdr/dev/devices/cpp_dev/cpp/: Makefile.am  cpp_dev.cpp  cpp_dev.h  cpp_dev_base.cpp  cpp_dev_base.h  main.cpp
src/testing/sdr/dev/devices/java_dev/java/: Makefile.am
src/testing/sdr/dev/devices/java_dev/java/src/java_dev/java/: java_dev.java  java_dev_base.java
src/testing/sdr/dom/components/CppCallbacks/cpp/: CppCallbacks.cpp  CppCallbacks.h  CppCallbacks_base.cpp  CppCallbacks_base.h  Makefile.am  main.cpp  struct_props.h
src/testing/sdr/dom/components/TestLoggingAPI/cpp/: Makefile.am  TestLoggingAPI.cpp  TestLoggingAPI.h  TestLoggingAPI_base.cpp  TestLoggingAPI_base.h  main.cpp
src/testing/sdr/dom/components/cpp_comp/cpp/: Makefile.am  cpp_comp.cpp  cpp_comp.h  cpp_comp_base.cpp  cpp_comp_base.h  main.cpp
src/testing/sdr/dom/components/java_comp/java/: Makefile.am
src/testing/sdr/dom/components/java_comp/java/src/java_comp/java/: java_comp.java  java_comp_base.java
src/testing/tests/: __init__.py  test_00_PythonFramework.py  test_00_ValidateTestDomain.py  test_01_DeviceManager.py  test_01_DomainManager.py  test_01_nodeBooter.py  test_02_logging_config.py  test_03_DeviceLifeCycle.py  test_04_ApplicationFactory.py  test_04_ApplicationRegistrar.py  test_04_Net.py  test_04_SimpleApplicationFactory.py  test_05_CollocationApplicationFactory.py  test_05_ComplexApplicationFactory.py  test_05_FileSystem.py  test_05_JavaDevice.py  test_05_LoadableDeviceTest.py  test_05_PythonDevice.py  test_06_AggregateDevice.py  test_06_PersonaDevice.py  test_07_PythonParsers.py  test_08_DCDConnections.py  test_08_EventChannelManager.py  test_08_EventPortConnections.py  test_08_Messaging.py  test_08_MessagingCpp.py  test_08_MessagingJava.py  test_08_ODMEvents.py  test_08_PropertyChangeEvents.py  test_08_PropertyChangeListener.py  test_08_SADConnections.py  test_08_SADProperties.py  test_08_SADUsesDevice.py  test_09_DomainPersistence.py  test_09_HardFail.py  test_09_Stress.py  test_10_DeviceAllocationExceptions.py  test_10_DeviceExceptions.py  test_11_AllPropTypes.py  test_11_ComplexProperties.py  (+10 more)
src/tools/: redhawk-softpkg
src/tools/LogEventAppender/: Makefile.am  RH_LogEventAppender.cc  RH_LogEventAppender.cpp  RH_LogEventAppender.h  corba.cc  corba.cpp  corba.h  debug.h  logdebug.h
src/xml/dtd/: softpkg.dtd  (+3 more)
(+623 files in other folders)
